--- a/ProjectManager/ProjectManager/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/ProjectManager/ProjectManager/en.lproj/MainStoryboard_iPhone.storyboard
@@ -205,7 +205,6 @@
         <!--Colleague List View Controller - Colleagues-->
         <scene sceneID="M91-ZO-Sfd">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dEm-g8-bve" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Colleagues" id="q0R-gP-83w" customClass="ColleagueListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="r2k-xv-Vsi">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
@@ -233,8 +232,23 @@
                         <segue destination="d2J-qh-ioo" kind="push" identifier="colleagueDetails" id="rwl-J0-FZd"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dEm-g8-bve" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047" y="886"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="O0W-yh-7gf">
+            <objects>
+                <viewController id="i9V-hW-vU0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zV2-dX-brj">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xg2-Ii-GlA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1412" y="583"/>
         </scene>
         <!--Colleague Detail View Controller-->
         <scene sceneID="WbR-0K-rjB">
